--- a/libblkid/src/blkid.h.in
+++ b/libblkid/src/blkid.h.in
@@ -278,6 +278,7 @@ extern int blkid_probe_filter_partitions_type(blkid_probe pr, int flag, char *na
 /* partitions probing flags */
 #define BLKID_PARTS_FORCE_GPT		(1 << 1)
 #define BLKID_PARTS_ENTRY_DETAILS	(1 << 2)
+#define BLKID_PARTS_MAGIC		(1 << 3)
 extern int blkid_probe_set_partitions_flags(blkid_probe pr, int flags);
 
 /* binary interface */
