--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -18,10 +18,12 @@ dist_noinst_HEADERS = \
 	list.h \
 	loopdev.h \
 	mangle.h \
+	match.h \
 	mbsalign.h \
 	md5.h \
 	minix.h \
 	nls.h \
+	optutils.h \
 	pamfail.h \
 	path.h \
 	pathnames.h \
