--- a/libmount/src/libmount.h.in
+++ b/libmount/src/libmount.h.in
@@ -341,8 +341,8 @@ extern struct libmnt_tabdiff *mnt_new_tabdiff(void);
 extern void mnt_free_tabdiff(struct libmnt_tabdiff *df);
 
 extern int mnt_diff_tables(struct libmnt_tabdiff *df,
-			   struct libmnt_table *old,
-			   struct libmnt_table *new);
+			   struct libmnt_table *old_tab,
+			   struct libmnt_table *new_tab);
 
 extern int mnt_tabdiff_next_change(struct libmnt_tabdiff *df,
 				   struct libmnt_iter *itr,
